# small-field-metal-ntt

./: .gitignore  Cargo.toml  README.md  TODOS.md
.github/workflows/: bench.yml  ci.yml
benches/: ntt_benchmark.rs
shaders/: babybear_field.metal  bb_ntt.metal  bb_ntt_r2.metal  m31_field.metal  ntt_common.metal  ntt_ct_dit_r2.metal  ntt_ct_gs_r2.metal  ntt_ct_gs_r4.metal  ntt_stockham_r2.metal  test_kernels.metal
shaders/babybear/: bb_common.metal  bb_ntt_r2.metal  bb_ntt_r4.metal  bb_ntt_stockham_r2.metal
shaders/fields/: babybear_field.metal
shaders/m31/: m31_ntt_common.metal  m31_ntt_ct_dit_r2.metal  m31_ntt_ct_gs_r2.metal  m31_ntt_ct_gs_r4.metal  m31_ntt_stockham_r2.metal
shaders/test/: test_kernels.metal
src/: gpu.rs  lib.rs
src/bench/: mod.rs
src/field/: babybear.rs  circle.rs  m31.rs  mod.rs
src/lde/: mod.rs
src/ntt/: bb_cpu_reference.rs  bb_metal_ct_dit_r2.rs  bb_metal_ct_gs_r4.rs  bb_metal_r2.rs  bb_metal_stockham_r2.rs  bb_twiddles.rs  cooperative.rs  cpu_reference.rs  metal_ct_dit_r2.rs  metal_ct_gs_r2.rs  metal_ct_gs_r4.rs  metal_r2.rs  metal_stockham_r2.rs  mod.rs  shader_config.rs  test_utils.rs  twiddle_cache.rs  twiddles.rs
src/ntt/babybear/: batch.rs  cpu_reference.rs  metal_ct_dit_r2.rs  metal_ct_gs_r4.rs  metal_r2.rs  metal_stockham_r2.rs  mod.rs  twiddles.rs
src/ntt/m31/: cooperative.rs  cpu_reference.rs  metal_ct_dit_r2.rs  metal_ct_gs_r2.rs  metal_ct_gs_r4.rs  metal_stockham_r2.rs  mod.rs  twiddles.rs
tests/: cache_coherency.rs  field_vectors.rs  gpu_integration.rs  ntt_cross_validation.rs
